<resources>
    <string name="app_name">Will Sephton</string>
    <string name="menu1">Delete All Points From DB</string>
    <string name="menu2">Choose A Feature</string>
    <string name="menu3">OpenGL</string>
    <string name="featureChoice">Feature Choice</string>
    <string name="submit">submit</string>
    <string name="opengl">OpenGL</string>
    <string name="minusX">-X</string>
    <string name="plusX">+X</string>
    <string name="minusY">-Y</string>
    <string name="plusY">+Y</string>
    <string name="minusZ">-Z</string>
    <string name="plusZ">+Z</string>
</resources>